"Updated index.html, output.css, package-lock.json, and style.css files with various changes to HTML structure, CSS classes, and animations."

--- a/output.css
+++ b/output.css
@@ -928,6 +928,10 @@ video {
   border-color: rgb(39 79 77 / var(--tw-border-opacity));
 }
 
+.border-\[\#cdddd55b\] {
+  border-color: #cdddd55b;
+}
+
 .border-\[\#cdddd5\] {
   --tw-border-opacity: 1;
   border-color: rgb(205 221 213 / var(--tw-border-opacity));
@@ -991,6 +995,11 @@ video {
 .bg-green-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(34 197 94 / var(--tw-bg-opacity));
+}
+
+.bg-red-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(185 28 28 / var(--tw-bg-opacity));
 }
 
 .bg-white {
@@ -1287,8 +1296,22 @@ video {
   transition-duration: 300ms;
 }
 
+.duration-500 {
+  transition-duration: 500ms;
+}
+
+.duration-700 {
+  transition-duration: 700ms;
+}
+
 .ease-in-out {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.hover\:scale-110:hover {
+  --tw-scale-x: 1.1;
+  --tw-scale-y: 1.1;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .hover\:bg-\[\#F9EDD7\]:hover {
