--- a/style.css
+++ b/style.css
@@ -16,3 +16,69 @@
     background-size: cover;
     background-position: center;
 }
+/* For animations */
+/* Sign up - it's free Button */
+.sign-btn{
+    position: relative;
+    overflow: hidden;
+}
+.sign-btn::after{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: var(--lightgreen);
+    z-index: -2;
+}
+.sign-btn::before{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0;
+    border-radius: 30px;
+    height: 100%;
+    background-color: white;
+    z-index: -1;
+    transition: 0.5s all ease-in-out;
+}
+.sign-btn:hover::before{
+    width: 100%;
+}
+/* Schedule a free demo Button */
+.demo-btn{
+    position: relative;
+    overflow: hidden;
+}
+.demo-btn::before{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0;
+    border-radius: 30px;
+    height: 100%;
+    background-color: var(--lightgreen);
+    z-index: -1;
+    transition: 0.5s all ease-in-out;
+}
+.demo-btn:hover::before{
+    width: 100%;
+}
+.store-btn:hover{
+    border-color: white;
+    position: relative;
+    /* animation: up 1s ease-in-out forwards; */
+    transform: translateY(-10px);
+}
+
+/* @keyframes up {
+    from{
+        transform: translateY(0);
+    }
+    to{
+        transform: translateY(-10px);
+    }
+} */
