--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
     --lightgreen: #01EE65;
     --lightergreen: #D8F6E6;
     --darkgreen: #003F3C;
+    scroll-behavior: smooth;
 }
 .cursive-p{
     font-family: "Caveat", cursive;
@@ -68,7 +69,6 @@
     width: 100%;
 }
 .store-btn:hover{
-    border-color: white;
     position: relative;
     /* animation: up 1s ease-in-out forwards; */
     transform: translateY(-10px);
@@ -82,3 +82,19 @@
         transform: translateY(-10px);
     }
 } */
+.move{
+    position: relative;
+}
+.move::before{
+    content: "";
+    width: 0;
+    height: 2px;
+    background-color: var(--lightgreen);
+    position: absolute;
+    bottom: -7px;
+    left: 0;
+    transition: 0.5s all ease-in-out;
+}
+.move:hover::before{
+    width: 100%;
+}
