--- a/style.css
+++ b/style.css
@@ -18,36 +18,6 @@
     background-position: center;
 }
 /* For animations */
-/* Sign up - it's free Button */
-.sign-btn{
-    position: relative;
-    overflow: hidden;
-}
-.sign-btn::after{
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: var(--lightgreen);
-    z-index: -2;
-}
-.sign-btn::before{
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 0;
-    border-radius: 30px;
-    height: 100%;
-    background-color: white;
-    z-index: -1;
-    transition: 0.5s all ease-in-out;
-}
-.sign-btn:hover::before{
-    width: 100%;
-}
 /* Schedule a free demo Button */
 .demo-btn{
     position: relative;
@@ -69,7 +39,6 @@
     width: 100%;
 }
 .store-btn:hover{
-    position: relative;
     /* animation: up 1s ease-in-out forwards; */
     transform: translateY(-10px);
 }
@@ -97,4 +66,39 @@
 }
 .move:hover::before{
     width: 100%;
+}
+.store-btn {
+    position: relative;
+    transition: transform 0.3s ease-in-out;
+}
+
+.store-btn::before {
+    content: "";
+    position: absolute;
+    bottom: -7px;
+    left: 0;
+    width: 100%;
+    height: 90%;
+    background-color: black;
+    z-index: -10;
+    opacity: 0;
+    border-radius: 9999px;
+    transition: opacity 0.3s ease-in-out;
+    
+}
+
+.store-btn:hover::before {
+    opacity: 1;
+    
+}
+.store-btn::after{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 9999px;
+    background-color: var(--lightgreen);
+    z-index: -2;
 }
